--- a/TODO
+++ b/TODO
@@ -1,3 +1,12 @@
+OLD TODO (from core.rb)
+(in roughly this order)
+- configuration file
+- configuration dialog
+- saving window state
+- custom markers
+- multiple map dirs
+
+NEW TODO:
 - map generation buffers, then only paint them onto the map
 - store tiles (with paths and date) in a db and read only those from disk
 - initial view offset
